--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
+    "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "morgan": "^1.6.1",
