package: Add missing mysql dependency

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "morgan": "^1.6.1",
+    "mysql": "^2.9.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "ramda": "^0.18.0"
